# voxel

./: .gitignore  CMakeLists.txt  IDEAS  ISSUES  README.md  create_fs.sh  delete_fs.sh  info_fs.sh  reset_fs.sh
assets/: mc_blocks.txt
shader/: block.frag  block.vert  text.frag  text.geom  text.vert
src/: Algebra.hpp  BitMap.hpp  Block.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  McRip.hpp  MemoryBlock.hpp  MemoryBlockUnit.hpp  ModTable.hpp  Mouse.cpp  Mouse.hpp  Player.cpp  Player.hpp  Profiler.cpp  Profiler.hpp  QuadEBO.cpp  QuadEBO.hpp  RenderState.hpp  RingBufferSingleProducerSingleConsumer.hpp  Settings.hpp  Shader.cpp  Shader.hpp  SparseMap.hpp  SphereIterator.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  ThreadBarrier.hpp  TinyAlgebra.hpp  TinyAlgebraExtensions.hpp  TinyAlgebraStringCast.hpp  (+8 more)
